# Quark

./: .gitignore  CMakeLists.template.txt  CMakeLists.txt  README.md
cmake/modules/: QuarkTargets.cmake
include/: Config.hpp.in
lib/: CMakeLists.txt  Quark.cpp
scripts/: clean.sh  template.ps1  template.sh
